@@ -91,6 +91,7 @@ def types_and_shorthands():
         'regex': 'r',
         'SplitAlign': 'n',
         'LayoutAlgorithm': 'n',
+        'HSFont': 'f',
     }
 
 
