@@ -4,6 +4,12 @@ herbstluftwm NEWS -- History of user-visible changes
 See the link:MIGRATION[] file for changes that introduced incompatibility to
 older versions.
 
+Current git version
+-------------------
+
+  * Client window titles (controlled by the theme attributes 'title_height',
+    'title_color', 'title_font')
+
 Release 0.9.1 on 2020-12-28
 ---------------------------
 
